--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   csv: ^6.0.0
   shared_preferences: ^2.3.2
   path_provider: ^2.0.11
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
