--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   shared_preferences: ^2.3.2
   path_provider: ^2.0.11
   intl: ^0.19.0
+  file_saver: ^0.0.7
+  pdf: ^3.11.1
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +28,12 @@ dev_dependencies:
 
 
 flutter:
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
 
   uses-material-design: true
 
