--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   path_provider: ^2.0.11
   intl: ^0.19.0
   pdf: ^3.11.1
+  permission_handler: ^10.0.0
+  external_path: ^1.0.2
+  share_plus: ^10.1.1 
 
 dev_dependencies:
   flutter_test:
