--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   intl: ^0.19.0
   pdf: ^3.11.1
   permission_handler: ^10.0.0
-  external_path: ^1.0.2
+  #external_path: ^1.0.2
   share_plus: ^10.1.1 
 
 dev_dependencies:
